// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <button
    class="c-trc8a3 cvey2f3"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      hover me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  2`] = `
<div>
  <noscript />
  <button
    class="c-trc8a3 cvey2f3"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      click me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly  3`] = `
<div>
  <noscript />
  <span
    class="c-d650rr"
    style="cursor: not-allowed;"
  >
    <button
      class="c-rg592x cvey2f3 conix1l cs6jo0l"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span
        class="cboe6wq"
      >
        Disabled
      </span>
    </button>
  </span>
</div>
`;
